update icon sosmed

--- a/index.html
+++ b/index.html
@@ -803,7 +803,10 @@
 				<div class="row align-items-center" style="padding: 15px">
 					<div class="col-md-8 col-sm-12 col-xs-8">
 						<div class="row" style="padding-top: 35px">
-							<div class="col-md-4 col-sm-4 col-xs-4" style="padding-bottom: 50px;">
+							<div
+								class="col-md-4 col-sm-4 col-xs-4"
+								style="padding-bottom: 50px"
+							>
 								<div
 									style="
 										background-color: #fff;
@@ -839,7 +842,10 @@
 									</span>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-4 col-xs-4" style="padding-bottom: 50px;">
+							<div
+								class="col-md-4 col-sm-4 col-xs-4"
+								style="padding-bottom: 50px"
+							>
 								<div
 									style="
 										background-color: #fff;
@@ -873,7 +879,10 @@
 									</span>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-4 col-xs-4" style="padding-bottom: 50px;">
+							<div
+								class="col-md-4 col-sm-4 col-xs-4"
+								style="padding-bottom: 50px"
+							>
 								<div
 									style="
 										background-color: #fff;
@@ -931,12 +940,18 @@
 		</section>
 		<!-- start calendar section -->
 		<!-- end calendar section -->
-		<section class="red-phone" style="padding: 0 !important; background-color: #fff !important;">
+		<section
+			class="red-phone"
+			style="padding: 0 !important; background-color: #fff !important"
+		>
 			<div class="container-fluid">
 				<div class="row align-items-center">
 					<div class="col-md-6 col-sm-12 col-xs-6">
 						<div class="row">
-							<div class="col-md-2 col-sm-12 col-xs-2" style="margin: auto;text-align: center;">
+							<div
+								class="col-md-2 col-sm-12 col-xs-2"
+								style="margin: auto; text-align: center"
+							>
 								<i
 									class="fas fa-phone-square"
 									style="font-size: 100px; color: red"
@@ -972,7 +987,12 @@
 							"
 						>
 							<!-- COMPANY BANNER -->
-							<img src="images/main/Poster Sosialisasi Protokol Kesehatan 5.jpg" class="img-fluid" alt="" style="max-width: 350px !important;" />
+							<img
+								src="images/main/Poster Sosialisasi Protokol Kesehatan 5.jpg"
+								class="img-fluid"
+								alt=""
+								style="max-width: 350px !important"
+							/>
 						</div>
 					</div>
 				</div>
@@ -1132,7 +1152,7 @@
 							src="images/main/Final Value-01 (1).png"
 							data-rjs="images/main/Final Value-01 (1).png"
 							alt=""
-							style="cursor: zoom-in;"
+							style="cursor: zoom-in"
 							class="zoom"
 						/>
 					</div>
@@ -1397,7 +1417,7 @@
 											><i class="fab fa-facebook-f" aria-hidden="true"></i
 										></a>
 									</li>
-									<li style="background-color: #75553e; padding: 5px 15px">
+									<!-- <li style="background-color: #75553e; padding: 5px 15px">
 										<a
 											class="twitter text-white-2"
 											href="https://twitter.com/"
@@ -1412,7 +1432,7 @@
 											target="_blank"
 											><i class="fab fa-google-plus-g"></i
 										></a>
-									</li>
+									</li> -->
 									<li style="background-color: #75553e; padding: 5px 15px">
 										<a
 											class="instagram text-white-2"
@@ -1424,7 +1444,7 @@
 											></i
 										></a>
 									</li>
-									<li style="background-color: #75553e; padding: 5px 15px">
+									<!-- <li style="background-color: #75553e; padding: 5px 15px">
 										<a
 											class="youtube text-white-2"
 											href="https://youtube.com/"
@@ -1434,7 +1454,7 @@
 												aria-hidden="true"
 											></i
 										></a>
-									</li>
+									</li> -->
 									<li style="background-color: #75553e; padding: 5px 15px">
 										<a
 											class="linkedin text-white-2"
