update warna currency

--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
 							style="
 								color: #000;
 								text-align: center;
-								background-color: #f4ecdc;
+								background-color: #e7d6ba;
 								width: 350px;
 								margin: auto;
 							"
