redesign red phone

--- a/index.html
+++ b/index.html
@@ -793,6 +793,7 @@
 			</div>
 		</section>
 		<!-- end slider section -->
+		<!-- start calendar section -->
 		<section
 			style="
 				padding: 0 !important;
@@ -938,9 +939,9 @@
 				</div>
 			</div>
 		</section>
-		<!-- start calendar section -->
 		<!-- end calendar section -->
-		<section
+		<!-- start red phone section -->
+		<!-- <section
 			class="red-phone"
 			style="padding: 0 !important; background-color: #fff !important"
 		>
@@ -986,7 +987,6 @@
 								margin: auto;
 							"
 						>
-							<!-- COMPANY BANNER -->
 							<img
 								src="images/main/Poster Sosialisasi Protokol Kesehatan 5.jpg"
 								class="img-fluid"
@@ -997,7 +997,51 @@
 					</div>
 				</div>
 			</div>
+		</section> -->
+		<!-- end red phone section -->
+		<!-- start red phone - black section -->
+		<section style="padding: 30px !important; background-color: #000 !important">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-md-8 col-sm-8 col-xs-8" style="margin: auto">
+						<div class="row">
+							<div
+								class="col-md-2 col-sm-12 col-xs-2"
+								style="margin: auto; text-align: center"
+							>
+								<i
+									class="fas fa-phone fa-info-circle"
+									style="
+										font-size: 50px;
+										color: black;
+										background-color: white;
+										border-radius: 50%;
+										padding: 30%;
+									"
+								></i>
+							</div>
+							<div
+								class="col-md-10 col-sm-12 col-xs-10 phone-info"
+								style="color: #fcae0c; line-height: 1.5"
+							>
+								<span
+									style="font-size: 25px; color: white; font-weight: 700"
+									class="text-uppercase"
+									>Red Phone</span
+								><br />
+								<span style="font-size: 35px; color: white"
+									>+62 812 3456 789</span
+								><br />
+								<span style="font-size: 25px; color: white; font-weight: 700"
+									>CLICK HERE FOR EMERGENCY CONTACT</span
+								>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
+		<!-- end red phone - black section -->
 		<!-- <section
 			style="padding: 0 !important; background-color: #8e4220 !important"
 		>
