update red phone dan tambahan html struktur org

--- a/index.html
+++ b/index.html
@@ -927,9 +927,54 @@
 							style="
 								color: #000;
 								text-align: center;
+								background-color: red;
+								width: 350px;
+								height: 100px !important;
+								margin: auto;
+								border-radius: 25px;
+							"
+						>
+							<div class="row" style="height: 100%;width: 90%;margin: auto;">
+								<div
+									class="col-md-2 col-sm-12 col-xs-2"
+									style="margin: auto; text-align: center"
+								>
+									<i
+										class="fas fa-phone fa-info-circle"
+										style="
+											font-size: 20px;
+											color: black;
+											background-color: white;
+											border-radius: 50%;
+											padding: 50%;
+										"
+									></i>
+								</div>
+								<div
+									class="col-md-10 col-sm-12 col-xs-10 phone-info"
+									style="color: #fcae0c; line-height: 1.5;margin: auto;"
+								>
+									<span
+										style="font-size: 12px; color: white; font-weight: 500"
+										class="text-uppercase"
+										>Red Phone</span
+									><br />
+									<span style="font-size: 12px; color: white; font-weight: 500"
+										>+62 812 3456 789</span
+									><br />
+									<span style="font-size: 12px; color: white; font-weight: 500"
+										>CLICK HERE FOR EMERGENCY CONTACT</span
+									>
+								</div>
+							</div>
+						</div>
+						<div
+							style="
+								color: #000;
+								text-align: center;
 								background-color: #e7d6ba;
 								width: 350px;
-								margin: auto;
+								margin: 15px auto auto auto;
 							"
 						>
 							<marquee>1-,386.28 / USD : Sell => 14.455.92</marquee>
@@ -940,67 +985,11 @@
 			</div>
 		</section>
 		<!-- end calendar section -->
-		<!-- start red phone section -->
-		<!-- <section
-			class="red-phone"
-			style="padding: 0 !important; background-color: #fff !important"
-		>
-			<div class="container-fluid">
-				<div class="row align-items-center">
-					<div class="col-md-6 col-sm-12 col-xs-6">
-						<div class="row">
-							<div
-								class="col-md-2 col-sm-12 col-xs-2"
-								style="margin: auto; text-align: center"
-							>
-								<i
-									class="fas fa-phone-square"
-									style="font-size: 100px; color: red"
-								></i>
-							</div>
-							<div
-								class="col-md-10 col-sm-12 col-xs-10 phone-info"
-								style="color: #fcae0c; line-height: 1.5"
-							>
-								<span
-									style="font-size: 25px; color: red; font-weight: 700"
-									class="text-uppercase"
-									>Red Phone</span
-								><br />
-								<span style="font-size: 35px">+62 812 3456 789</span><br />
-								<span style="font-size: 25px; color: red; font-weight: 700"
-									>CLICK HERE FOR EMERGENCY CONTACT</span
-								>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 col-xs-6">
-						<div
-							style="
-								text-align: center;
-								/* background-color: #bba64d; */
-								padding: 5px;
-								width: 95%;
-								color: #000;
-								font-weight: 700;
-								height: 350px;
-								margin: auto;
-							"
-						>
-							<img
-								src="images/main/Poster Sosialisasi Protokol Kesehatan 5.jpg"
-								class="img-fluid"
-								alt=""
-								style="max-width: 350px !important"
-							/>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
-		<!-- end red phone section -->
+		
 		<!-- start red phone - black section -->
-		<section style="padding: 30px !important; background-color: #000 !important">
+		<!-- <section
+			style="padding: 30px !important; background-color: #000 !important"
+		>
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-8 col-sm-8 col-xs-8" style="margin: auto">
@@ -1040,7 +1029,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- end red phone - black section -->
 		<!-- <section
 			style="padding: 0 !important; background-color: #8e4220 !important"
