--- a/index-org.html
+++ b/index-org.html
@@ -1330,7 +1330,7 @@
 		<!-- start about product section -->
 		<section class="wow fadeIn p-0 bg-light-gray top-space">
 			<div class="container-fluid">
-				<div class="row">
+				<div class="row" style="text-align: center;">
 					<div class="col-12">
 						<img
 							src="images/main/organization-structure.jpeg"
