tebelin font red phone

--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
 								border-radius: 25px;
 							"
 						>
-							<div class="row" style="height: 100%;width: 90%;margin: auto;">
+							<div class="row" style="height: 100%; width: 90%; margin: auto">
 								<div
 									class="col-md-2 col-sm-12 col-xs-2"
 									style="margin: auto; text-align: center"
@@ -952,17 +952,17 @@
 								</div>
 								<div
 									class="col-md-10 col-sm-12 col-xs-10 phone-info"
-									style="color: #fcae0c; line-height: 1.5;margin: auto;"
+									style="color: #fcae0c; line-height: 1.5; margin: auto"
 								>
 									<span
-										style="font-size: 12px; color: white; font-weight: 500"
+										style="font-size: 12px; color: white; font-weight: 700"
 										class="text-uppercase"
 										>Red Phone</span
 									><br />
-									<span style="font-size: 12px; color: white; font-weight: 500"
+									<span style="font-size: 12px; color: white; font-weight: 700"
 										>+62 812 3456 789</span
 									><br />
-									<span style="font-size: 12px; color: white; font-weight: 500"
+									<span style="font-size: 12px; color: white; font-weight: 700"
 										>CLICK HERE FOR EMERGENCY CONTACT</span
 									>
 								</div>
@@ -985,7 +985,7 @@
 			</div>
 		</section>
 		<!-- end calendar section -->
-		
+
 		<!-- start red phone - black section -->
 		<!-- <section
 			style="padding: 30px !important; background-color: #000 !important"
