zoom pic struktur organisasi

--- a/index-org.html
+++ b/index-org.html
@@ -1330,15 +1330,17 @@
 		<!-- start about product section -->
 		<section class="wow fadeIn p-0 bg-light-gray top-space">
 			<div class="container-fluid">
-				<div class="row" style="text-align: center;">
+				<div class="row" style="text-align: center">
 					<div class="col-12">
 						<img
 							src="images/main/organization-structure.jpeg"
-							class="img-fluid"
+							class="img-fluid zoom"
+							data-rjs="images/main/Final Value-01 (1).png"
 							alt=""
+							style="cursor: zoom-in"
 						/>
 					</div>
-				</div>				
+				</div>
 			</div>
 		</section>
 		<!-- end about product section -->
