update image struktur organisasi

--- a/index-org.html
+++ b/index-org.html
@@ -1333,9 +1333,9 @@
 				<div class="row" style="text-align: center">
 					<div class="col-12">
 						<img
-							src="images/main/organization-structure.jpeg"
+							src="images/main/Final_Structure-01.png"
 							class="img-fluid zoom"
-							data-rjs="images/main/Final Value-01 (1).png"
+							data-rjs="images/main/Final_Structure-01.png"
 							alt=""
 							style="cursor: zoom-in"
 						/>
