update BMS, tampilan red phone di mobile

--- a/index.html
+++ b/index.html
@@ -924,11 +924,11 @@
 						style="border: 0px yellow solid"
 					>
 						<div
+							class="red-phone-frame"
 							style="
 								color: #000;
 								text-align: center;
 								background-color: red;
-								width: 350px;
 								height: 100px !important;
 								margin: auto;
 								border-radius: 25px;
@@ -936,23 +936,30 @@
 						>
 							<div class="row" style="height: 100%; width: 90%; margin: auto">
 								<div
-									class="col-md-2 col-sm-12 col-xs-2"
+									class="col-2 col-lg-2 col-md-2 col-sm-2 col-xs-2"
 									style="margin: auto; text-align: center"
 								>
 									<i
-										class="fas fa-phone fa-info-circle"
+										class="fas fa-phone fa-info-circle red-phone-icon"
 										style="
 											font-size: 25px;
 											color: black;
 											background-color: white;
 											border-radius: 50%;
-											padding: 50%;
 										"
 									></i>
 								</div>
 								<div
-									class="col-md-10 col-sm-12 col-xs-10 phone-info"
-									style="color: #fcae0c; line-height: 1.5; margin: auto"
+									class="
+										col-10 col-lg-10 col-md-10 col-sm-10 col-xs-10
+										phone-info
+									"
+									style="
+										color: #fcae0c;
+										line-height: 1.5;
+										margin: auto;
+										text-align: left;
+									"
 								>
 									<span
 										style="font-size: 12px; color: white; font-weight: 700"
@@ -969,11 +976,11 @@
 							</div>
 						</div>
 						<div
+							class="red-phone-frame"
 							style="
 								color: #000;
 								text-align: center;
 								background-color: #e7d6ba;
-								width: 350px;
 								margin: 15px auto auto auto;
 							"
 						>
@@ -1266,9 +1273,9 @@
 						style="background-color: rgb(178, 177, 175, 0.8); padding: 25px"
 					>
 						<img
-							src="images/main/Final_BMS-01.png"
-							data-rjs="images/main/Final_BMS-01.png"
-							alt="Final_BMS-01.png"
+							src="images/main/Final_BMS-02a.png"
+							data-rjs="images/main/Final_BMS-02a.png"
+							alt="Final_BMS-02a.png"
 							class=""
 							usemap="#patchMap"
 						/>
@@ -1308,6 +1315,15 @@
 								shape="poly"
 								onmouseover="showMenu('menu4');"
 								style="cursor: pointer"
+							/>
+							<area
+								target=""
+								alt="BMS Document Hierarchy"
+								title="BMS Document Hierarchy"
+								href="index-bms.html"
+								coords="536,189,739,217"
+								shape="rec"
+								style="cursor: pointer;"
 							/>
 						</map>
 						<div id="stakeholder" class="frame-style">
