--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,7 @@
 								target=""
 								alt="BMS Document Hierarchy"
 								title="BMS Document Hierarchy"
-								href="index-bms.html"
+								href="index-bms-hirarki.html"
 								coords="536,189,739,217"
 								shape="rec"
 								style="cursor: pointer"
