update final values home

--- a/index.html
+++ b/index.html
@@ -1189,8 +1189,8 @@
 					<div class="col-12" style="text-align: center">
 						<!-- <h1 style="color: #000; text-align: left;font-weight: 700;">Value</h1> -->
 						<img
-							src="images/main/Final Value-01 (1).png"
-							data-rjs="images/main/Final Value-01 (1).png"
+							src="images/main/Final Value-01.png"
+							data-rjs="images/main/Final Value-01.png"
 							alt=""
 							style="cursor: zoom-in"
 							class="zoom"
