--- a/index-bms.html
+++ b/index-bms.html
@@ -1394,9 +1394,9 @@
 						</map>
 						<div id="stakeholder" class="frame-style">
 							<ul>
-								<li>Community</li>
-								<li>Governemnt & Regulator</li>
-								<li>Business Partners</li>
+								<li><a href="https://www.facebook.com/">Community</a></li>
+								<li><a href="https://www.facebook.com/">Governemnt & Regulator</a></li>
+								<li><a href="https://www.facebook.com/">Business Partners</a></li>
 							</ul>
 						</div>
 						<div id="menu2" class="frame-style">
