--- a/index-bms.html
+++ b/index-bms.html
@@ -1392,14 +1392,14 @@
 								style="cursor: pointer"
 							/>
 						</map>
-						<div id="stakeholder" class="frame-style">
+						<div id="stakeholder" class="frame-style" style="text-align: left;">
 							<ul>
 								<li><a href="https://www.facebook.com/">Community</a></li>
 								<li><a href="https://www.facebook.com/">Governemnt & Regulator</a></li>
 								<li><a href="https://www.facebook.com/">Business Partners</a></li>
 							</ul>
 						</div>
-						<div id="menu2" class="frame-style">
+						<div id="menu2" class="frame-style" style="text-align: left;">
 							<ul>
 								<li>Governance</li>
 								<li>Risk & Compliance</li>
@@ -1408,7 +1408,7 @@
 								<li>Workplace & Work Condition Control</li>
 							</ul>
 						</div>
-						<div id="menu3" class="frame-style">
+						<div id="menu3" class="frame-style" style="text-align: left;">
 							<ul>
 								<li>Finance & Accounting</li>
 								<li>General Contract</li>
@@ -1420,7 +1420,7 @@
 								<li>Environmental</li>
 							</ul>
 						</div>
-						<div id="menu4" class="frame-style">
+						<div id="menu4" class="frame-style" style="text-align: left;">
 							<ul>
 								<li>Organisation</li>
 								<li>Recruitment</li>
